# InetChat

./: README.md
Client/: CMakeLists.txt
Client/src/: Client.cpp  MessageLogger.cpp
Server/: CMakeLists.txt
backEnd/: CMakeLists.txt
backEnd/include/: Socket.h
backEnd/src/: Server.cpp  main.cpp
frontEnd/: CMakeLists.txt
frontEnd/src/: Client.cpp
